...
      )}
    </View>
  )

  if (loader) {
    return (
      <SafeAreaView testID="search-results-screen" accessibilityLabel="search-results-screen" style={styles.container}>
        <Loader />
      </SafeAreaView>
    )
  }

  if (error) {
...
